catkin_ws/logs/uas/build.make.007.log.stderr
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:1:
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp: In function ‘int uas_mode(std::string)’:
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:40:14: warning: format ‘%s’ expects argument of type ‘char*’, but argument 8 has type ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} [-Wformat=]
   40 |     ROS_INFO("Settng arm to %s", mode);
      |              ^~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:40:5: note: in expansion of macro ‘ROS_INFO’
   40 |     ROS_INFO("Settng arm to %s", mode);
      |     ^~~~~~~~
In file included from /home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:2:
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:40:30: note: format string is defined here
   40 |     ROS_INFO("Settng arm to %s", mode);
      |                             ~^
      |                              |
      |                              char*
/home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp: At global scope:
/home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:6:20: error: redefinition of ‘ros::ServiceClient armService’
    6 | ros::ServiceClient armService;
      |                    ^~~~~~~~~~
In file included from /home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:2:
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:7:20: note: ‘ros::ServiceClient armService’ previously declared here
    7 | ros::ServiceClient armService;
      |                    ^~~~~~~~~~
In file included from /opt/ros/noetic/include/ros/node_handle.h:35,
                 from /opt/ros/noetic/include/ros/ros.h:45,
                 from /home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:1:
/opt/ros/noetic/include/ros/service_client.h: In instantiation of ‘bool ros::ServiceClient::call(Service&) [with Service = mavros_msgs::State_<std::allocator<void> >]’:
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:38:26:   required from here
/opt/ros/noetic/include/ros/service_client.h:91:25: error: ‘struct mavros_msgs::State_<std::allocator<void> >’ has no member named ‘request’
   91 |     return call(service.request, service.response, st::md5sum(service));
      |                 ~~~~~~~~^~~~~~~
/opt/ros/noetic/include/ros/service_client.h:91:42: error: ‘struct mavros_msgs::State_<std::allocator<void> >’ has no member named ‘response’
   91 |     return call(service.request, service.response, st::md5sum(service));
      |                                  ~~~~~~~~^~~~~~~~
In file included from /opt/ros/noetic/include/ros/service_client.h:33,
                 from /opt/ros/noetic/include/ros/node_handle.h:35,
                 from /opt/ros/noetic/include/ros/ros.h:45,
                 from /home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:1:
/opt/ros/noetic/include/ros/service_traits.h: In instantiation of ‘static const char* ros::service_traits::MD5Sum<M>::value() [with M = mavros_msgs::State_<std::allocator<void> >]’:
/opt/ros/noetic/include/ros/service_traits.h:79:102:   required from ‘const char* ros::service_traits::md5sum() [with M = mavros_msgs::State_<std::allocator<void> >]’
/opt/ros/noetic/include/ros/service_client_options.h:95:33:   required from ‘void ros::ServiceClientOptions::init(const string&, bool, const M_string&) [with Service = mavros_msgs::State_<std::allocator<void> >; std::string = std::__cxx11::basic_string<char>; ros::M_string = std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
/opt/ros/noetic/include/ros/node_handle.h:1264:5:   required from ‘ros::ServiceClient ros::NodeHandle::serviceClient(const string&, bool, const M_string&) [with Service = mavros_msgs::State_<std::allocator<void> >; std::string = std::__cxx11::basic_string<char>; ros::M_string = std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:35:69:   required from here
/opt/ros/noetic/include/ros/service_traits.h:47:34: error: ‘__s_getServerMD5Sum’ is not a member of ‘mavros_msgs::State_<std::allocator<void> >’
   47 |     return M::__s_getServerMD5Sum().c_str();
      |            ~~~~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/uas_mission.dir/build.make:63: CMakeFiles/uas_mission.dir/src/uas_mission.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:155: CMakeFiles/uas_mission.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
